client: Fix long report headers on mobile

--- a/client/src/components/PageTemplate/components/HeaderWithIcon/HeaderWithIcon.scss
+++ b/client/src/components/PageTemplate/components/HeaderWithIcon/HeaderWithIcon.scss
@@ -1,7 +1,6 @@
 .header-with-icon {
   display: flex;
   flex-direction: row;
-  height: 3rem;
   align-items: center;
 
   &__icon {
